# KANLib

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: adaptive_grid.py  plotting.py
notes/: architecture.md
src/kanlib/: __init__.py  compute_coefficients.py  kan_utils.py  refinement.py  spline.py  spline_plotting.py
src/kanlib/nn/: __init__.py  kan_base_layer.py  kan_module.py  linear_base.py  spline_basis.py  spline_coefficient.py
src/kanlib/nn/base_modules/: conv1d.py  convolution.py  linear.py
src/kanlib/nn/bspline/: __init__.py  bspline_basis.py  convolution.py  linear.py
src/kanlib/nn/gaussian_rbf/: __init__.py  convolution.py  gaussian_rbf_basis.py  linear.py
src/kanlib/nn/grbf/: gaussian_rbf_basis.py
src/kanlib/nn/spline_basis/: __init__.py  _validation.py  adaptive_grid.py  spline_basis.py
src/kanlib/training/: __init__.py  history.py  kan_training_loop.py  model_checkpoint.py  stepwise_grid_refinement.py  training_loop.py
src/kanlib/visualization/: __init__.py  extractors.py  spline.py
tests/kanlib/: test_compute_coefficients.py  test_refinement.py  test_spline.py
tests/kanlib/nn/: test_kan_base_layer.py  test_kan_module.py  test_linear_base.py  test_spline_basis.py  test_spline_coefficient.py  test_splines.py
tests/kanlib/nn/base_modules/: test_linear.py
tests/kanlib/nn/bspline/: test_bspline_basis.py  test_bspline_convolution.py  test_bspline_linear.py
tests/kanlib/nn/gaussian_rbf/: test_gaussian_rbf_basis.py  test_grbf_convolution.py  test_grbf_linear.py
tests/kanlib/nn/grbf/: test_gaussian_rbf_basis.py  test_grbf_convolution.py  test_grbf_linear.py
tests/kanlib/visualization/: test_spline.py
