[project]
name = "kanlib"
version = "0.1.0"
description = "Predefined modules top build KANs with PyTorch."
readme = "README.md"
authors = [
    { name = "Julian Hoever", email = "julianhoever@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo[recommended]>=0.15.2",
    "mypy>=1.16.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
