[project]
name = "kanlib"
version = "0.1.0"
description = "Predefined modules top build KANs with PyTorch."
readme = "README.md"
authors = [
    { name = "Julian Hoever", email = "julianhoever@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.18.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "python-lsp-server>=1.13.2",
    "ruff>=0.14.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
