[project]
name = "kanlib"
version = "0.1.0"
description = "Predefined modules top build KANs with PyTorch."
readme = "README.md"
authors = [
    { name = "Julian Hoever", email = "julianhoever@posteo.de" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.19.0",
    "pyzmq>=27.1.0",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
    "ty>=0.0.14",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
